--- a/src/pages/inspection-survey-answer/inspection-survey-answer.html
+++ b/src/pages/inspection-survey-answer/inspection-survey-answer.html
@@ -5,22 +5,26 @@
 </ion-header>
 
 <ion-content padding>
-    <ion-slides>
-        <ion-slide *ngFor="let question of inspectionQuestionAnswer">
-            <survey-question [question]="currentQuestion" (questionAnswered)="validateQuestionAnswer($event)"
-                             *ngIf="currentQuestion.questionType != questionTypeEnum.groupedQuestion"></survey-question>
-            <div *ngIf="currentQuestion.questionType == questionTypeEnum.groupedQuestion">
-                <div class="parent-question-title">
-                    <h4>{{question.title}}</h4>
-                    <div>
-                        <ion-icon name="add-circle" (click)="addNewQuestionGroup()"></ion-icon>
-                    </div>
-                </div>
-                <parent-child-question *ngFor="let answer of currentQuestionAnswerList; let i = index" [groupIndex]="i" [question]="answer"
-                                       (childQuestionAnswered)="getNextQuestionFromAnswer($event)">{{i+1}}</parent-child-question>
+    <survey-question [question]="currentQuestion" (questionAnswered)="validateQuestionAnswer($event)"
+                     *ngIf="currentQuestion.questionType != questionTypeEnum.groupedQuestion"></survey-question>
+    <div *ngIf="currentQuestion.questionType == questionTypeEnum.groupedQuestion">
+
+        <div class="parent-question-title">
+            <h4>{{currentQuestion.title}}</h4>
+            <div>
+                <ion-icon name="add-circle" (click)="addNewQuestionGroup()"></ion-icon>
             </div>
-        </ion-slide>
-    </ion-slides>
+        </div>
+        <div *ngIf="currentQuestionAnswerList.length > 0">
+            <parent-child-question *ngFor="let answer of currentQuestionAnswerList; let i = index"
+                                   [groupIndex]="i"
+                                   [question]="this.inspectionSurveyQuestion[selectedIndex]"
+                                   [answer]="answer"
+                                   (childQuestionAnswered)="getNextQuestionFromAnswer($event)"
+                                   (childQuestionDeleted)="deleteChildQuestion($event)"></parent-child-question>
+        </div>
+        <div *ngIf="currentQuestionAnswerList.length == 0">{{currentQuestion.description}}</div>
+    </div>
 </ion-content>
 
 <ion-footer class="page-footer">
@@ -31,7 +35,7 @@
                 <ion-icon name="skip-backward"></ion-icon>
                 {{'surveyPreviousQuestion' | translate}}
             </button>
-            <button ion-button icon-start type="button" style="float: right;" (click)="saveAnswer()"
+            <button ion-button icon-start type="button" style="float: right;" (click)="nextQuestion()"
                     [disabled]="nextQuestionDisabled">
                 <ion-icon name="skip-forward"></ion-icon>
                 {{nextButtonTitle}}
