feat(#131) Add validation saving answer group and navigation

--- a/src/pages/inspection-survey-answer/inspection-survey-answer.html
+++ b/src/pages/inspection-survey-answer/inspection-survey-answer.html
@@ -21,7 +21,8 @@
             <parent-child-question *ngFor="let answer of currentQuestionAnswerList; let i = index"
                                    [groupIndex]="i"
                                    [answer]="answer"
-                                   (questionAnswered)="validateQuestionAnswer($event)"
+                                   (questionAnswered)="updateGroupQuestionAnswer($event)"
+                                   (groupAnswersCompleted)="validateQuestionAnswer($event)"
                                    (answerGroupDeleted)="deleteChildQuestion($event)"></parent-child-question>
         </div>
         <div *ngIf="currentQuestionAnswerList.length == 0">{{currentQuestion.description}}</div>
