feat(#179) get native app information + add link to Store

--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -38,6 +38,7 @@
         <div class="version-warning">
             <div class="version"><ion-icon name="alert"></ion-icon><ion-label>{{'versionLabel' | translate}} {{getAppVersion()}}</ion-label></div>
             <h5>{{'versionInvalidWarning' | translate}}</h5>
+            <div class="store-button"><button ion-button (click)="goToStore()">{{storeLink}}</button></div>
         </div>
     </div>
     </div>
