feat(#179) fix appversion for ios

--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -7,7 +7,7 @@
                 <strong>SURVI</strong> Prévention
             </h2>
         </div>
-        <div *ngIf="minimalVersionValid">
+        <div *ngIf="allowLogin">
             <form class="list-form">
                 <ion-item>
                     <ion-label floating>
