feat(#154) Rename building-child-pictures to only pictures component

--- a/src/pages/building-anomaly-detail/building-anomaly-detail.html
+++ b/src/pages/building-anomaly-detail/building-anomaly-detail.html
@@ -26,7 +26,7 @@
         </ion-item-group>
     </ion-list>
 
-    <pictures-manager [repo]="picRepo" [saveAuto]="false" formControlName="id">{{'loading' | translate}}</pictures-manager>
+    <pictures [repo]="picRepo" [saveAuto]="false" formControlName="id">{{'loading' | translate}}</pictures>
 </ion-content>
 
 <ion-footer class="page-footer">
