feat(#154) Update height of pictures component for anomalies

--- a/src/pages/building-anomaly-detail/building-anomaly-detail.html
+++ b/src/pages/building-anomaly-detail/building-anomaly-detail.html
@@ -26,7 +26,7 @@
         </ion-item-group>
     </ion-list>
 
-    <pictures [repo]="picRepo" [saveAuto]="false" formControlName="id">{{'loading' | translate}}</pictures>
+    <pictures [repo]="picRepo" height="350px" [saveAuto]="false" formControlName="id">{{'loading' | translate}}</pictures>
 </ion-content>
 
 <ion-footer class="page-footer">
