Feat(#226) Can't change cross street when inspection is not started.  Can't select building street as cross street.

--- a/src/pages/intervention-general/intervention-general.html
+++ b/src/pages/intervention-general/intervention-general.html
@@ -44,9 +44,10 @@
                     description="{{'transversal' | translate}}"
                     formControlName="idLaneTransversal"
                     [displayFieldName]="'name'"
+                    [disabledValue]="plan?.mainBuildingIdLane"
                     [keyFieldName]="'id'"
                     [dataService]="laneService"
-                    [isDisabled]="!userAllowed"></search-box>
+                    [isDisabled]="plan?.status !== inspectionDetailProvider.InspectionVisitStatusEnum.Started"></search-box>
         </ion-list>
     </form>
     <ion-card>
