feat(#229) Validation on contact detail form

--- a/src/pages/building-details/building-details.html
+++ b/src/pages/building-details/building-details.html
@@ -57,7 +57,7 @@
         <ion-row>
           <ion-col width-50>
             <ion-item>
-              <ion-input type="tel" placeholder="DIE" [pattern]="intergerPattern" item-start formControlName="estimatedWaterFlow"></ion-input>
+              <ion-input type="tel" placeholder="DIE" [pattern]="integerPattern" item-start formControlName="estimatedWaterFlow"></ion-input>
             </ion-item>
           </ion-col>
           <ion-col width-50>
