--- a/src/pages/building-pnaps/building-pnaps.html
+++ b/src/pages/building-pnaps/building-pnaps.html
@@ -2,7 +2,7 @@
 <ion-header class="page-header">
   <ion-navbar>
     <ion-icon name="menu" menuToggle left></ion-icon>
-    <ion-title>{{'buildingPnaps' | translate}}</ion-title>
+    <ion-title>{{name}}</ion-title>
   </ion-navbar>
 </ion-header>
 
