Fix(#263) Missing translation for the back button and for the fire hydrant search bar.

--- a/src/pages/city-fire-hydrant/city-fire-hydrant.html
+++ b/src/pages/city-fire-hydrant/city-fire-hydrant.html
@@ -2,7 +2,7 @@
   <ion-navbar>
     <ion-title>{{'fireHydrantList' | translate}}</ion-title>
   </ion-navbar>
-  <ion-searchbar (ionInput)="getItems($event)"></ion-searchbar>
+  <ion-searchbar (ionInput)="getItems($event)" [placeholder]="'navigationSearch' | translate"></ion-searchbar>
 </ion-header>
 <ion-content>
   <ion-list class="list-items">
