--- a/src/pages/fire-hydrant/fire-hydrant.html
+++ b/src/pages/fire-hydrant/fire-hydrant.html
@@ -140,6 +140,7 @@
                             formControlName="idLane"
                             [displayFieldName]="'name'"
                             [keyFieldName]="'id'"
+                            [disabledValue]="form.controls.idIntersection.value"
                             [dataService]="laneService"></search-box>
                 <div class="validation-error-text"
                      *ngIf="!form.controls.idLane.valid &&
@@ -174,6 +175,7 @@
                         formControlName="idIntersection"
                         [displayFieldName]="'name'"
                         [keyFieldName]="'id'"
+                            [disabledValue]="form.controls.idLane.value"
                         [dataService]="laneService"></search-box>
                 <div class="validation-error-text" *ngIf="!form.controls.idIntersection.valid">{{'requiredInformation' | translate}}</div>
 
